fixed responsiveness of projects section on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ nav li {
 .projects-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     width: 95%;
     min-height: 820px;
     margin: auto;
@@ -189,25 +190,25 @@ nav li {
 
 .projects {
     line-height: 2em;
-    height: 630px;
-    width: 35%;
-    margin: 1.5em;
+    height: 600px;
+    width: 500px;
+    margin: 2.5em;
     border-radius: 15px;
-    /* border: 2px solid #333; */
-    transition: height .15s;
+    border: 2px solid #333;
+    /* border: 2px solid red; */
+    transition: height .20s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .projects:hover {
-    height: 710px;
+    height: 620px;
     box-shadow: 10px 10px 5px slategrey;
 }
 
 
 .projects-container img {
-    height: 50%;
-    max-width: 100%;
-    margin-bottom: 1em;
+    height: 55%;
+    width: 100%;
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
     border-bottom: 2px solid #333;
@@ -215,26 +216,23 @@ nav li {
     object-position: 40%;
 }
 
-.project-info {
-    margin: 0 auto;
-}
-
 .project-info h2 {
     font-weight: 600;
+    /* border: red solid 2px; */
 }
 
 .projects-container .text {
     padding: 0 15px;
-    margin-top: 10px;
-    font-size: clamp(0.9rem, 1.2vw, 2rem); 
+    margin-top: 5px;
+    font-size: clamp(0.9rem, 1.1vw, 2rem); 
 }
 
 .project-icons {
     display: flex;
     justify-content: space-evenly;
     margin: auto;
-    margin-top: 15px;
-    font-size: 2rem;
+    margin-top: 8px;
+    font-size: clamp(1.3rem, 1.6vw, 2rem); 
     /* border: solid 2px red; */
     width: 100px;
 }
@@ -243,11 +241,11 @@ nav li {
     display: flex;
     justify-content: center;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 15px;
     /* border: 2px solid red; */
 }
 .project-tech li {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     margin: 0 10px;
     padding: 0 5px;
     color: #145A32;
@@ -258,18 +256,27 @@ nav li {
 
 
 
-@media (max-width: 900px){
-    .projects-container {
+@media (max-width: 1100px) {
+    .project-container-top {
         flex-direction: column;
-        width: 475px;
     }
-    .projects-container > div:hover {
+    
+    .projects:hover {
         height: 630px;
     }
-    .projects-container .text {
-        font-size: 1.3rem;
+    /* .projects-container .text {
+        font-size: 1rem;
+    } */
+}
+
+@media (max-width: 600px) {
+    .projects {
+        width: 400px
     }
 }
+
+
+/* CONTACT */
 
 .contact {
     width: 60%;
